--- a/style.css
+++ b/style.css
@@ -2,3 +2,74 @@
     text-align: center;
     box-sizing: border-box;
 }
+body{
+
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777;
+    background: #777;
+    width: 960px;   
+    margin: auto;
+    font-size: 18px;
+
+}
+.header{
+    background: #ebebeb;
+    width: 50%px;
+    padding: 30px 0 30px 0;
+    margin-top: 10px;
+}
+.section{
+    background: #ebebeb;
+    width: 495px;
+    margin-top: 20px;
+    margin-bottom:15px;
+    padding-top: 30px;
+    padding-bottom: 15px;
+    float: left;
+}
+.article{
+    color: #ebebeb;
+    background: #777;
+    width: 475px;
+    margin: auto;
+    margin-top:30px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    
+}
+.h1-3{
+    color: #777;
+    font-weight: bold;
+    background: #ebebeb;
+    width: 435px;
+    margin: auto;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin-top: 15px;
+}
+.p{
+    color: #777;
+    background: #ebebeb;
+    width: 435px;
+    margin: auto;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin-top: 15px;
+}
+.aside{
+    background: #ebebeb;
+    float: left;
+    width: 450px;
+    margin-top: 20px;
+    margin-left: 15px;
+    margin-bottom:15px;
+    padding-top: 30px;
+    padding-bottom: 228px;
+}
+.footer{
+    clear: left;
+    background: #ebebeb;
+    width: 50%px;
+    padding: 30px 0 30px 0;
+
+}
